--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_Github.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_Github.tex
@@ -5,13 +5,11 @@
 
 \begin{document}
 \subsection{GitHub}
-Beim Nachforschen und beim Arbeiten mit GitHub wurde der Artikel [\citetitle{t3nGithub} \cite{t3nGithub}] und die Webseite [\citetitle{github} \cite{github}] verwendet. 
-
-\ \\
 GitHub ist ein System zur kollaborativen Versionsverwaltung für Software-Entwicklungsprojekte.
 Für GitHub gibt es zahlreiche Clients, die meisten von diesen sind Kommandozeilen-Tools.
 Mit diesen Clients ist es möglich, Änderungen an Projekten zu speichern und jederzeit wieder auf vorherige Versionen zugreifen zu können.
-GitHub bietet viele Statistiken und ermöglicht auch Benutzern, ohne Erfahrung mit Kommandozeilen-Befehlen, einen sehr einfachen Umgang.
+GitHub bietet viele Statistiken und ermöglicht auch Benutzern, ohne Erfahrung mit Kommandozeilen-Befehlen, einen sehr einfachen Umgang. \newline
+[\citeauthor{t3nGithub} \cite{t3nGithub}, GitHub \cite{github}]
 
 \subsubsection{Repositories}
 Jedes Projekt wird in einem Repository, kurz auch Repo, abgespeichert.
