--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_NavigationDrawer.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_NavigationDrawer.tex
@@ -5,12 +5,10 @@
 
 \begin{document}
 \section{NavigationDrawer}
-Beim Nachforschen und beim Erstellen des NavigationDrawers wurden die Blogs [\citetitle{bNavDrawer} \cite{bNavDrawer}], [\citetitle{bNavDrawerRT} \cite{bNavDrawerRT}] und die Anleitung zu NavigationDrawers [\citetitle{adNavDrawer} \cite{adNavDrawer}] verwendet. 
-
-\ \\
 Der NavigationDrawer ist ein Menü, das die wichtigsten Navigationsoptionen am linken Bildschirmrand darstellt.
 Diese Leiste ist meistens versteckt und wird angezeigt sobald der Benutzer mit dem Finger vom linken Rand des Bildschirms in Richtung Bildschirmmitte streicht oder auf das NavigationDrawerIcon klickt.
 Erneutes Klicken auf dieses Icon oder Streichen nach links versteckt den NavigationDrawer. \newline
+[\citeauthor{bNavDrawer} \cite{bNavDrawer}, \citeauthor{bNavDrawerRT} \cite{bNavDrawerRT}, Android Developers \cite{adNavDrawer}]
 \ \\
 \begin{figure}[h]
 	\begin{subfigure}[b]{0.3\textwidth}
