--- a/FIPLY/Dokumente/FIPLY Latex/literatur.bib
+++ b/FIPLY/Dokumente/FIPLY Latex/literatur.bib
@@ -64,7 +64,7 @@
 }
 
 @Misc{bMediaPlayer,
-  author = {{Ravi Tamada}},
+  author = {Ravi Tamada},
   title =  {Android Building Audio Player Tutorial},
   month =  feb,
   year =   {2016},
@@ -72,7 +72,7 @@
 }
 
 @Misc{bNavDrawer,
-  author = {{Ben Jakuben}},
+  author = {Ben Jakuben},
   title =  {How to Add a Navigation Drawer in Android},
   month =  feb,
   year =   {2016},
@@ -88,10 +88,11 @@
 }
 
 @Misc{bPermissions,
-  title = {Everything every Android Developer must know about new Android's Runtime Permission},
-  month = mar,
-  year =  {2016},
-  url =   {http://inthecheesefactory.com/blog/things-you-need-to-know-about-android-m-permission-developer-edition/en}
+  author = {Sittiphol Phanvilai},
+  title =  {Everything every Android Developer must know about new Android's Runtime Permission},
+  month =  mar,
+  year =   {2016},
+  url =    {http://inthecheesefactory.com/blog/things-you-need-to-know-about-android-m-permission-developer-edition/en}
 }
 
 @Misc{flattr,
@@ -159,7 +160,7 @@
 }
 
 @Misc{yFreemium,
-  author = {{Jarek Wilkiewicz}},
+  author = {Jarek Wilkiewicz},
   title =  {Implementing Freemium},
   month =  feb,
   year =   {2016},
