--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_Advertising.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_Advertising.tex
@@ -8,11 +8,11 @@
 Mit dem Schalten von Werbung steht eine weitere Einkommensquelle von Apps zur Verfügung.
 Es gibt mehrere Dienste die das Schalten von Werbungen unterstützen.
 Google AdMob ist der populärste dieser Dienste und wird von Google empfohlen.
-Beim Nachforschen und beim Erstellen der Werbungen wurde die Dokumentation zu diesen auf der Google Developers Webseite [\citetitle{gdAdMob} \cite{gdAdMob}] verwendet. 
 
 \ \\
-AdMob unterstützt 2 verschiedene Arten von Werbungen. 
-Zum einen gibt es, die sich am Rand des Bildschirms befindlichen, Banner Ads, zum anderen, die den ganzen Bildschirm abdeckenden, Interstitial Ads.
+AdMob unterstützt zwei verschiedene Arten von Werbungen. 
+Zum einen gibt es, die sich am Rand des Bildschirms befindlichen, Banner Ads, zum anderen, die den ganzen Bildschirm abdeckenden, Interstitial Ads. \newline
+[Google Developers \cite{gdAdMob}]
 \ \\
 \begin{figure}[h]
 	\begin{subfigure}[b]{0.3\textwidth}
@@ -27,8 +27,8 @@ Zum einen gibt es, die sich am Rand des Bildschirms befindlichen, Banner Ads, zu
 
 \newpage
 \subsubsection{Banner Ads}
-Beim Erstellen der Banner wurde die Dokumentation zu diesen auf der Google Developers Webseite [\citetitle{gdBanner} \cite{gdBanner}] verwendet. \newline 
-Banner Ads nehmen einen kleinen Teil des Bildschirms ein. Diese werden in einem layout XML file erstellt und dann in einer Activity oder in einem Fragment geladen. Der Benutzer kann durch einen Klick auf das Banner auf die beworbene Webseite weitergeleitet werden.
+Banner Ads nehmen einen kleinen Teil des Bildschirms ein. Diese werden in einem layout XML file erstellt und dann in einer Activity oder in einem Fragment geladen. Der Benutzer kann durch einen Klick auf das Banner auf die beworbene Webseite weitergeleitet werden. \newline
+[Google Developers \cite{gdBanner}]
 \ \\
 \begin{lstlisting}
 <com.google.android.gms.ads.AdView
@@ -56,15 +56,16 @@ AdRequest adRequest = new AdRequest.Builder()
 mAdView.loadAd(adRequest);
 \end{lstlisting}
 Dieser Code beinhaltet das Anfordern einer Werbung und anschließend wird das Laden dieser eingeleitet.
-Das Banner wird erst dann sichtbar, wenn die Werbung komplett geladen wurde. %Zeitform(wurde/worden ist) 
+Das Banner wird erst dann sichtbar, wenn die Werbung komplett geladen worden ist. 
 Die angeforderte Werbung kann durch Daten wie Geschlecht, Geburtstag oder Position präziser auf den Benutzer abgestimmt werden.
 Diese Abstimmung erfolgt durch die Methoden .setGender(), .setLocation() und .setBirthday().	
 
 \newpage
 \subsubsection{Interstitial Ads}
-Beim Erstellen der Interstitials wurde die Dokumentation zu diesen auf der Google Developers Webseite [\citetitle{gdInterstitials} \cite{gdInterstitials}] verwendet. \newline 
-Interstitial Ads bedecken den gesamten Bildschirm. Der Benutzer erhält die Entscheidung die Anzeige zu schließen oder dem Link der Werbung zu folgen. Deshalb eignen sich Interstitials für Apps die gelegentlich zwischen mehreren Bildschirmen wechseln.
-Bei diesen Werbungen ist zu beachten, dass die App im Hintergrund weiterläuft, also sollten laute Tonwiedergaben und ressourcenintensive Benutzerinteraktionen pausiert werden.
+Interstitial Ads bedecken den gesamten Bildschirm. Wird die Werbung angezeigt, kann der Benutzer die Anzeige schließen oder dem Link der Werbung folgen.
+Deshalb eignen sich Interstitials für Apps die gelegentlich zwischen mehreren Bildschirmen wechseln.
+Bei diesen Werbungen ist zu beachten, dass die App im Hintergrund weiterläuft, also sollten laute Tonwiedergaben und ressourcenintensive Benutzerinteraktionen pausiert werden. \newline
+[Google Developers \cite{gdInterstitials}]
 \ \\
 \begin{lstlisting}
 mInterstitialAd = new InterstitialAd(this);
@@ -94,7 +95,7 @@ if(mInterstitialAd.isLoaded())
     mInterstitialAd.show();
 \end{lstlisting}
 Ist die Werbung geladen kann sie angezeigt werden.\newline
-Ebenso sind zahlreiche Methoden im AdListener vorhanden die ermöglichen das Verhalten nach einer Interaktion mit der Werbung zu verwalten.\newline
-Deshalb liegt es nahe die nächste Werbung gleich im onAdClosed() eines AdListeners anzufordern.
+Ebenso sind zahlreiche Methoden im AdListener vorhanden, die es ermöglichen das Verhalten nach einer Interaktion mit der Werbung, zu verwalten.\newline
+Deshalb liegt es nahe, die nächste Werbung im onAdClosed() eines AdListeners zu laden, um diese jederzeit auf Abruf anzeigen zu können.
 
 \end{document}
