Added two more latex Files

--- a/FIPLY/Dokumente/FIPLY Latex/literatur.bib
+++ b/FIPLY/Dokumente/FIPLY Latex/literatur.bib
@@ -1,66 +1,10 @@
 % Encoding: UTF-8
 
-@Misc{exportCSVSourceWrite,
-	title = {Vgl.: OpenCSV Writer},
-	month = mar,
-	year = {2016},
-	url = {http://viralpatel.net/blogs/java-read-write-csv-file/}
-}
-
-@Misc{exportCSVSourceRead,
-	title = {Vgl.: OpenCSV Website},
-	month = mar,
-	year = {2016},
-	url = {http://opencsv.sourceforge.net/}
-}
-
-@Misc{promteil1,
-	title = {Möglichkeiten der App Vermarktung: Teil 1},
-	month = apr,
-	year = {2016},
-	url = {http://www.app-entwicklung.info/2015/04/moglichkeiten-der-app-vermarktung-teil-1-website-social-media-presse-events-co/}
-}
-
-@Misc{promteil1,
-	title = {Möglichkeiten der App Vermarktung: Teil 1},
-	month = apr,
-	year = {2016},
-	url = {http://www.app-entwicklung.info/2015/04/moglichkeiten-der-app-vermarktung-teil-1-website-social-media-presse-events-co/}
-}
-
-@Misc{promteil2,
-	title = {Möglichkeiten der App Vermarktung: Teil 2},
-	month = may,
-	year = {2015},
-	url = {http://www.app-entwicklung.info/2015/05/moglichkeiten-der-app-vermarktung-teil-2-die-app-store-optimierung-aso/}
-}
-
-@Misc{tplantheorie,
-	title = {Fachkonzept zur Erstellung eines Trainingsplans},
-	month = jan,
-	year = {2016},
-	url = {https://www.facebook.com/Lindenpower-Fitness-174332482640559/}
-}
-
-@Misc{datbshowcase,
-	title = {Data Binding Guide},
-	month = mar,
-	year = {2016},
-	url = {http://developer.android.com/tools/data-binding/guide.html}
-}
-
-@Misc{datbusing,
-	title = {Droidcon NYC 2015 - Data Binding Techniques},
-	month = sep,
-	year = {2015},
-	url = {https://www.youtube.com/watch?v=WdUbXWztKNY}
-}
-
-@Misc{datbdef,
-	title = {DataBinding Definition},
-	month = mar,
-	year = {2016},
-	url = {https://www.it-visions.de/glossar/alle/6875/Data_Binding.aspx}
+@Misc{2016,
+  title = {Möglichkeiten der App Vermarktung: Teil 1},
+  month = apr,
+  year =  {2016},
+  url =   {http://www.app-entwicklung.info/2015/04/moglichkeiten-der-app-vermarktung-teil-1-website-social-media-presse-events-co/}
 }
 
 @Misc{adAdministerBilling,
@@ -158,6 +102,41 @@
   url =    {http://inthecheesefactory.com/blog/things-you-need-to-know-about-android-m-permission-developer-edition/en}
 }
 
+@Misc{datbdef,
+	title = {DataBinding Definition},
+	month = mar,
+	year = {2016},
+	url = {https://www.it-visions.de/glossar/alle/6875/Data_Binding.aspx}
+}
+
+@Misc{datbshowcase,
+	title = {Data Binding Guide},
+	month = mar,
+	year = {2016},
+	url = {http://developer.android.com/tools/data-binding/guide.html}
+}
+
+@Misc{datbusing,
+	title = {Droidcon NYC 2015 - Data Binding Techniques},
+	month = sep,
+	year = {2015},
+	url = {https://www.youtube.com/watch?v=WdUbXWztKNY}
+}
+
+@Misc{exportCSVSourceRead,
+	title = {Vgl.: OpenCSV Website},
+	month = mar,
+	year = {2016},
+	url = {http://opencsv.sourceforge.net/}
+}
+
+@Misc{exportCSVSourceWrite,
+	title = {Vgl.: OpenCSV Writer},
+	month = mar,
+	year = {2016},
+	url = {http://viralpatel.net/blogs/java-read-write-csv-file/}
+}
+
 @Misc{flattr,
   title = {About Flattr},
   month = feb,
@@ -207,12 +186,33 @@
   url =   {https://support.google.com/googleplay/android-developer/answer/6151557}
 }
 
+@Misc{promteil1,
+	title = {Möglichkeiten der App Vermarktung: Teil 1},
+	month = apr,
+	year = {2016},
+	url = {http://www.app-entwicklung.info/2015/04/moglichkeiten-der-app-vermarktung-teil-1-website-social-media-presse-events-co/}
+}
+
+@Misc{promteil2,
+	title = {Möglichkeiten der App Vermarktung: Teil 2},
+	month = may,
+	year = {2015},
+	url = {http://www.app-entwicklung.info/2015/05/moglichkeiten-der-app-vermarktung-teil-2-die-app-store-optimierung-aso/}
+}
+
 @Misc{t3nGithub,
   author = {Moritz Stückler},
   title =  {Was ist eigentlich dieses GitHub?},
   month =  mar,
   year =   {2016},
   url =    {http://t3n.de/news/eigentlich-github-472886/}
+}
+
+@Misc{tplantheorie,
+	title = {Fachkonzept zur Erstellung eines Trainingsplans},
+	month = jan,
+	year = {2016},
+	url = {https://www.facebook.com/Lindenpower-Fitness-174332482640559/}
 }
 
 @Misc{wMusicDroid,
