Removed date and author headers

--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_Music-Player.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_Music-Player.tex
@@ -1,7 +1,7 @@
 \documentclass[FIPLY_base.tex]{subfiles}
 
-\author{Andreas Denkmayr}
-\date{19. Februar 2016}
+%\author{Andreas Denkmayr}
+%\date{19. Februar 2016}
 
 \begin{document}
 \section{Musik}
