--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_Donations.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_Donations.tex
@@ -1,7 +1,7 @@
 \documentclass[FIPLY_base.tex]{subfiles}
 
-\author{Andreas Denkmayr}
-\date{25. Februar 2016}
+%\author{Andreas Denkmayr}
+%\date{25. Februar 2016}
 
 \begin{document}
 \subsection{Donations}
