--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_Fragments.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_Fragments.tex
@@ -1,7 +1,7 @@
 \documentclass[FIPLY_base.tex]{subfiles}
 
-\author{Andreas Denkmayr}
-\date{20. Dezember 2015}
+%\author{Andreas Denkmayr}
+%\date{20. Dezember 2015}
 
 \begin{document}
 \section{Fragments}
