--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_Github.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_Github.tex
@@ -1,7 +1,7 @@
 \documentclass[FIPLY_base.tex]{subfiles}
 
-\author{Andreas Denkmayr}
-\date{13. März 2016}
+%\author{Andreas Denkmayr}
+%\date{13. März 2016}
 
 \begin{document}
 \subsection{GitHub}
