--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_NavigationDrawer.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_NavigationDrawer.tex
@@ -1,7 +1,7 @@
 \documentclass[FIPLY_base.tex]{subfiles}
 
-\author{Andreas Denkmayr}
-\date{12. März 2016}
+%\author{Andreas Denkmayr}
+%\date{12. März 2016}
 
 \begin{document}
 \section{NavigationDrawer}
