--- a/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_Trainingsplan.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_Trainingsplan.tex
@@ -1,7 +1,6 @@
 \documentclass[FIPLY_base.tex]{subfiles}
 
-\title{Konzept zur Erstellung eines Trainingsplans}
-\author{Daniel Bersenkowitsch}
+%\author{Daniel Bersenkowitsch}
 
 \begin{document}
 
