--- a/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_pflichtenheft.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_pflichtenheft.tex
@@ -1,7 +1,6 @@
 \documentclass[FIPLY_base.tex]{subfiles}
 
-\title{Pflichtenheft}
-\author{Daniel Bersenkowitsch}
+%\author{Daniel Bersenkowitsch}
 
 
 
