--- a/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_DataBinding.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_DataBinding.tex
@@ -1,7 +1,6 @@
 \documentclass[FIPLY_base.tex]{subfiles}
 
-\title{Datenanbindung}
-\author{Daniel Bersenkowitsch}
+%\author{Daniel Bersenkowitsch}
 	
 \begin{document}
 
