--- a/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_Promotions.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_Promotions.tex
@@ -1,6 +1,6 @@
 \documentclass[FIPLY_base.tex]{subfiles}
 
-\author{Daniel Bersenkowitsch}
+%\author{Daniel Bersenkowitsch}
 
 \begin{document}
 \subsection{Promotion}
