--- a/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_export.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_export.tex
@@ -1,5 +1,7 @@
 \documentclass[FIPLY_base.tex]{subfiles}
 
+%\author{Daniel Bersenkowitsch}
+
 \begin{document}
 \section{Exportieren}
 \subsection{Als CSV exportieren - OpenCSV}
@@ -85,7 +87,7 @@ sendIntent.putExtra(Intent.EXTRA_STREAM, u);
 sendIntent.setType("text/html");
 startActivity(sendIntent);
 \end{lstlisting}
-Das senden von Emails mittels Intents erfolgt damit über externe Applikationen, die diese Funktion anbieten. Bei ausführen des obigen Codes wird der Benutzer gefragt, mit welchem Emailclient auf seinem Smartphone er die Aktion durchführen will. Die Emaildetails werden der externen Applikation mitgegeben, worauf sich diese öffnet und der benutzer dann nur noch auf den \grqq{}senden\grqq{}-Knopf drücken muss. 
+Das senden von Emails mittels Intents erfolgt damit über externe Applikationen, die diese Funktion anbieten. Bei ausführen des obigen Codes wird der Benutzer gefragt, mit welchem Emailclient auf seinem Smartphone er die Aktion durchführen will. Die Emaildetails werden der externen Applikation mitgegeben, worauf sich diese öffnet und der benutzer dann nur noch auf den \grqq{}senden\grqq{}-Knopf drücken muss. [\citetitle{exportCSVsendMail} \cite{exportCSVsendMail}]
 \subsubsection{Vorteile/Nachteile von Intents}
 Der große Vorteil dieser Methode ist es, dass man ohne eigenen Emailclient auskommt. Da die Email über eine andere Applikation versendet wird muss sich der Entwickler nicht weiter um aufwendige Emailclient codierungen kümmern. 
 \ \\
