Updated LateX Organisation

--- a/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
@@ -12,49 +12,66 @@
 \newpage
 \subfile{bersenkowitsch_pflichtenheft}
 
+\newpage % KAPITEL 1
+\section{Verwendete Technologien}
+\subfile{denkmayr_GitHub}
 \newpage
-\subfile{bersenkowitsch_guiessay} %%%% not yet approved
+\subfile{bersenkowitch_androidstudio}
+\subfile{denkmayr_intellij}
+\newpage
+%\subfile{irsiegler_latex}
+\subfile{denkmayr_latex}
+\subfile{bersenkowitsch_photoshop}
+
+
+\subfile{bersenkowitsch_guiessay} % KAPITEL 2
+
+\newpage % KAPITEL 3
+\section{Komponenten der App}
 
 \newpage
-\subfile{denkmayr_Fragments} % wird kontrolliert
+\subfile{bersenkowitsch_icons}
 
 \newpage
-\subfile{bersenkowitsch_Databinding} % wird kontrolliert
+\subfile{denkmayr_Fragments}
 
 \newpage
-\subfile{denkmayr_Bundles} %%%% not yet approved
+\subfile{bersenkowitsch_Databinding}
 
 \newpage
-\subfile{denkmayr_Permissions} % 100% fertig
+\subfile{denkmayr_Bundles}
 
 \newpage
-\subfile{denkmayr_Music-Player} % wird kontrolliert
+\subfile{denkmayr_Permissions}
 
 \newpage
-\subfile{denkmayr_NavigationDrawer} %%%% not yet approved
+\subfile{denkmayr_Music-Player}
 
 \newpage
-\subfile{bersenkowitsch_export} % wird kontrolliert
+\subfile{denkmayr_NavigationDrawer}
+
+\newpage
+\subfile{bersenkowitsch_export}
 
 \newpage
 \section{Commercialization}
-\subfile{denkmayr_Donations} % wird kontrolliert
+\subfile{denkmayr_Donations} 
 \newpage
-\subfile{denkmayr_Freemium} %%%% not yet approved
+\subfile{denkmayr_Freemium} 
 \newpage
-\subfile{denkmayr_Advertising} % wird kontrolliert
+\subfile{denkmayr_Advertising}
+%\newpage
+%\subfile{irsiegler_PaidVersion} 
+%\newpage
+%\subfile{irsiegler_FreePremium} 
+%\newpage
+%\subfile{irsiegler_SellApp}
 \newpage
-\subfile{irsiegler_PaidVersion} %%%% not yet approved
-\newpage
-\subfile{irsiegler_FreePremium} %%%% not yet approved
-\newpage
-\subfile{irsiegler_SellApp} %%%% not yet approved
-\newpage
-\subfile{bersenkowitsch_Promotions} % wird kontrolliert
+\subfile{bersenkowitsch_Promotions} 
 
 \newpage
 \section{Der Trainingsplan}
-\subfile{bersenkowitsch_Trainingsplan} % wird kontrolliert
+\subfile{bersenkowitsch_Trainingsplan}
 
 \newpage
 \printbibliography
