--- a/FIPLY/Dokumente/FIPLY Latex/literatur.bib
+++ b/FIPLY/Dokumente/FIPLY Latex/literatur.bib
@@ -123,6 +123,13 @@
 	url = {https://www.youtube.com/watch?v=WdUbXWztKNY}
 }
 
+@Misc{exportCSVsendMail,
+  title = {Mails versenden in Android},
+  month = mar,
+  year = {2016},
+  url = {http://stackoverflow.com/questions/5401104/android-exporting-to-csv-and-sending-as-email-attachment}
+}
+
 @Misc{exportCSVSourceRead,
 	title = {Vgl.: OpenCSV Website},
 	month = mar,
