arrangement of pics solved

--- a/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_Promotions.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_Promotions.tex
@@ -10,7 +10,7 @@ Es gibt dutzende Mittel um eine Android Applikation zu vermarkten. Ob über das 
 \subsubsection{Website}
 Ein gute Methode um eine positive Reputation für seine Applikation zu schaffen ist es eine Website zu erstellen. Sie soll die Besucher einen kurzen Einblick in das Projekt und die Applikation bieten. Damit kann man bereits vor der Veröffentlichung eine positive Reputation schaffen und Benutzer an Land ziehen, bevor das Produkt überhaupt auf dem Markt ist. Eine solche Teaser-Website sollte nur mit den minimalistischen Beschreibungen der Hauptfunktionen verkleidet werden, ein einfaches Design haben und einen guten Überblick über das Endprodukt aufzeigen: Als Beispiel Die Website der Applikation Instagram:
 
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\includegraphics[scale=0.3]{img/instagramdotcom}
 	\caption{Screenshot von http://instagram.com:}
@@ -24,7 +24,7 @@ Ein bereits seit langem wichtiges Element in der online Vermarktung ist die Soci
 \newline
 Ein weiteres gutes Social Media mittel ist Reddit.com. Die Seite inkludiert die Funktion einen eigenen Developer Blog zu führen, worauf updates, bugs und neue Ideen für die Funktionalitäten der Applikationen geteilt werden können. Zusätzlich können bei dieser Webseite angemeldete User auch in diesem Blog posten - sich mit den Entwicklern unterhalten und mithelfen die App zu verbessern. Gute Vorschläge oder Ideen werden von Benutzern mit einem Pfeil nach oben markiert und wandern in der Postingliste hinauf damit die Sichtbarkeit steigt und sie mehr Personen lesen und darüber diskutieren können. Dies schafft eine sogenannte "Below-the-line"- Werbemöglichkeit für das Projekt.
 
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\includegraphics[scale=0.28]{img/fiplysubredditscreenshot}
 	\caption{Screenshot von http://reddit.com/r/fiply}
