--- a/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_pflichtenheft.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_pflichtenheft.tex
@@ -20,7 +20,7 @@
 	\subsection{Funktionale Anforderungen}
 	Die persönlichen Profildaten werden beim ersten Öffnen der Applikation erfasst. Der Benutzer kann jederzeit einen Trainingskatalog einsehen, in der alle Übungen grafisch nach Muskelgruppen sortiert sind. Jede Übung besitzt eine detaillierte Beschreibung, Anleitung und ein Video der Ausführung. Sobald man alle nötigen Informationen angegeben hat, ist es möglich einen Trainingsplan generieren zu lassen, welcher  als Excel-Tabelle abgespeichert und verschickt werden kann. Wenn man zu trainieren beginnen möchte, kann man eine Trainingssession starten. Dabei gibt es einen eingebauten Musikplayer, der die lokale Musikbibliothek wiedergibt. Die aktuelle Übung wird angezeigt und weiters steht ein Timer zur Verfügung, der vor allem beim Konditionstraining zum Einsatz kommt. Nach jedem Trainingsablauf soll der Benutzer ein Feedback geben, um seine Fortschritte zu vermerken. Die Fortschritte können jederzeit eingesehen und auf Social Networks geteilt werden. Zusätzlich werden einmal wöchentlich Userdaten (z.B.: Gewicht und Gesundheitszustand) abgefragt, um seine Entwicklung akkurat darstellen zu können.
 	\subsubsection{Use Case Diagram (1 bis 6)}
-	\begin{figure}[h]
+	\begin{figure}[H]
 		\begin{subfigure}[b]{0.3\textwidth}
 			\centering
 			\includegraphics[scale=0.6]{img/UseCaseDiagram}
