--- a/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_pflichtenheft.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_pflichtenheft.tex
@@ -27,7 +27,7 @@
 		\end{subfigure}
 		\caption{Das Use-Case Diagramm zu der Applikation}
 	\end{figure}
-	
+	\newpage
 	\subsubsection{Systemarchitektur}
 	
 	\subsubsection{Use Case Details}
