--- a/FIPLY/Dokumente/FIPLY Latex/irsiegler_PaidVersion.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/irsiegler_PaidVersion.tex
@@ -1,7 +1,7 @@
 \documentclass[FIPLY_base.tex]{subfiles}
 
-\author{Gerald Irsiegler}
-\date{25. Februar 2016}
+%\author{Gerald Irsiegler}
+%\date{25. Februar 2016}
 
 \begin{document}
 	
