--- a/FIPLY/Dokumente/FIPLY Latex/irsiegler_SocialMedia.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/irsiegler_SocialMedia.tex
@@ -1,7 +1,7 @@
 \documentclass[FIPLY_base.tex]{subfiles}
 
-\author{Gerald Irsiegler}
-\date{13. März 2016}
+%\author{Gerald Irsiegler}
+%\date{13. März 2016}
 
 \begin{document}
 \section{Social Media}
