Fixed Section Subsection Problems

--- a/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
@@ -26,8 +26,10 @@
 \subfile{denkmayr_intellij}
 \newpage
 \subfile{irsiegler_latex}
+\subfile{bersenkowitsch_latex}
 \subfile{denkmayr_latex}
 \subfile{bersenkowitsch_photoshop}
+\subfile{bersenkowitsch_umlet}
 
 
 \newpage % KAPITEL PLANUNG
@@ -69,9 +71,11 @@
 \newpage
 \subfile{denkmayr_Notifications}
 
+
 \newpage % KAPITEL DESIGN
 \section{Design} 
 \subfile{bersenkowitsch_icons}
+
 
 \newpage % KAPITEL KOMMERZIALISIERUNG
 \section{Kommerzialisierung}
