--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_NavigationDrawer.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_NavigationDrawer.tex
@@ -4,7 +4,7 @@
 %\date{12. März 2016}
 
 \begin{document}
-\section{NavigationDrawer}
+\subsection{NavigationDrawer}
 Der NavigationDrawer ist ein Menü, das die wichtigsten Navigationsoptionen am linken Bildschirmrand darstellt.
 Diese Leiste ist meistens versteckt und wird angezeigt sobald der Benutzer mit dem Finger vom linken Rand des Bildschirms in Richtung Bildschirmmitte streicht oder auf das NavigationDrawerIcon klickt.
 Erneutes Klicken auf dieses Icon oder Streichen nach links versteckt den NavigationDrawer. \newline
