--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_intellij.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_intellij.tex
@@ -4,8 +4,6 @@
 %\date{25. Februar 2016}
 
 \begin{document}
-\subsection{Subfiles}
-TODO
-\subsection{Quellenangaben}
+\subsubsection{IntelliJ}
 TODO
 \end{document}
