--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_latex.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_latex.tex
@@ -4,8 +4,8 @@
 %\date{25. Februar 2016}
 
 \begin{document}
-\subsection{Subfiles}
+\subsubsection{Subfiles}
 TODO
-\subsection{Quellenangaben}
+\subsubsection{Quellenangaben}
 TODO
 \end{document}
