--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_Permissions.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_Permissions.tex
@@ -4,7 +4,7 @@
 %\date{25. Februar 2016}
 
 \begin{document}
-\section{Permissions}
+\subsection{Permissions}
 Permissions legen fest, auf welche Funktionen des Smartphones eine App Zugriff hat.
 Ziel dieses Systems ist es, Apps nur so viel zu erlauben, wie unbedingt nötig.
 Das bedeutet, dass es einer bösartigen App nicht möglich ist, erheblichen Schaden zu verursachen, ohne die entsprechenden Permissions zu haben.
@@ -21,7 +21,7 @@ Da eine Applikation zu Beginn keine Permissions besitzt, müssen diese im Manife
 \end{lstlisting}
 
 
-\subsection{Arten von Permissions}
+\subsubsection{Arten von Permissions}
 Android unterstützt mehrere Levels von Permissions.
 \begin{itemize}
 \item \textbf{Normal Permissions} stellen kaum Gefahr für die Privatsphäre des Benutzers oder den Betrieb des Systems dar und werden automatisch gegeben sobald sie im Manifest angefordert werden.
@@ -37,13 +37,13 @@ und die SYSTEM\_ALERT\_WINDOW Permission, die es ermöglicht Fenster über allen
 \end{itemize}
 
 \newpage
-\subsection{bis Android 5.1 (API level 22)}
+\subsubsection{bis Android 5.1 (API level 22)}
 Wenn auf dem Gerät Android 5.1 (API level 22) oder niedriger installiert ist, werden alle Dangerous und Special Permissions auf der Google Play Store Seite der App angezeigt 
 und müssen vor dem Herunterladen bestätigt werden. 
 Sollten durch ein Update mehr Permissions benötigt werden, müssen diese beim Update bestätigt werden. 
 Permissions können nur durch die Deinstallation der App zurückgenommen werden.
 
-\subsection{ab Android 6.0 (API level 23)}
+\subsubsection{ab Android 6.0 (API level 23)}
 Wenn auf dem Gerät Android 6.0 (API level 23) oder höher installiert ist, wird beim Download aus dem Google Play Store keine Bestätigung der Permissions verlangt.
 Die Permissions werden nun während der Laufzeit der App abgefragt. Diese Abfragen muss der Entwickler selbst erstellen und anzeigen lassen.
 
@@ -94,7 +94,7 @@ private void showMessageOKCancel(String message, DialogInterface
 Da die Permissions erst während der Laufzeit abgefragt werden, ist es möglich nur manche von diesen zu bestätigen und so die Bereiche, in welche die App eingreifen kann, nach seinen eigenen Bedürfnissen zu kontrollieren.
 Zudem können Permissions jederzeit in den Systemeinstellungen des Geräts zurückgenommen werden.
 
-\subsection{Permission groups}
+\subsubsection{Permission groups}
 Permissions werden in Permission groups zusammengefasst.
 Beim Anfordern einer Dangerous Permission, wird nicht die einzelne Permission, sondern die jeweilige Permission group angezeigt.
 Sowohl eine Anforderung der READ\_CONTACTS Permission, als auch der WRITE\_CONTACTS Permission, zeigt an, dass Zugriff auf die Kontakte des Gerätes benötigt wird. Wird eine Dangerous Permission angefordert, während die App schon eine Dangerous Permission derselben Gruppe besitzt, so wird die Anfrage automatisch bestätigt.
