--- a/FIPLY/Dokumente/FIPLY Latex/irsiegler_Video.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/irsiegler_Video.tex
@@ -1,8 +1,8 @@
-\documentclass[article,10pt]{scrartcl}
+\documentclass[FIPLY_base.tex]{subfiles}
 
-\title{VideoView, WebView, Youtube Android Player API}
-\author{Gerald Irsiegler}
-\date{20. Dezember 2015}
+%\title{VideoView, WebView, Youtube Android Player API}
+%\author{Gerald Irsiegler}
+%\date{20. Dezember 2015}
 
 \begin{document}
 
