--- a/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
@@ -25,6 +25,7 @@
 \subfile{bersenkowitsch_androidstudio}
 \subfile{denkmayr_intellij}
 \newpage
+\subsection{LaTeX}
 \subfile{irsiegler_latex}
 \subfile{bersenkowitsch_latex}
 \subfile{denkmayr_latex}
@@ -33,6 +34,7 @@
 
 
 \newpage % KAPITEL PLANUNG
+\section{Planung}
 \subfile{bersenkowitsch_guiessay}
 \newpage
 \subfile{bersenkowitsch_Databinding}
