--- a/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_DataBinding.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_DataBinding.tex
@@ -4,17 +4,17 @@
 	
 \begin{document}
 
-\section{Datenanbindung}
+\subsection{Datenanbindung}
 Als Datenbindung (engl. Data Binding) bezeichnet man die automatische Weitergabe von Daten zwischen Objekten. Typischerweise werden Daten aus einem Datenobjekt an ein Steuerelement der Benutzeroberfläche weitergegeben. Aber auch zwischen Steuerelementen ist Datenbindung in einigen Frameworks möglich. [\citetitle{datbdef} \cite{datbdef}]
 \newline
 Beim Anzeigen von Daten in einer Listenansicht beispielsweise muss man das Steuerungselement nach jeder Veränderung der Daten aktualisieren. Wenn man aber die Technologie des Datenanbindung verwendet, braucht man nur die Objektliste an das Steuerungselement mit einem einfachen Zuweisungsbefehl anbinden. Dadurch erneuert sich die Listenansicht der Daten jedes Mal automatisch, sobald sich die Objektliste auch verändert.
 
 
-\subsection{Verwendungszweck}
+\subsubsection{Verwendungszweck}
 In erster Linie werden dem Programmierer dadurch viele Zeilen Code erspart. Datenanbindung trennt einen großen Teil des UI Codes von den Aktivitäten und Fragmenten, wodurch eine bessere Übersicht über das Projekt verschafft wird. Zusätzlich erspart man sich umständliche findViewById Codiereungen, die sehr performancelastig sind. [\citetitle{datbusing} \cite{datbusing}]
 
 
-\subsection{Vorher}
+\subsubsection{Vorher}
 
 Hier auf der untigen Grafik sehen wir eine Android XML-Layoutdatei mit dem Code in der zugehörigen Aktivität ohne Datenanbindung. Wir sehen ein LinearLayout mit zwei enthaltenen TextViews. Diesen wird in der Aktivität den Vornamen und den Nachnamen eines Employee Models zugewiesen. Ein Problem ist es, jedes Element eine ID zuweisen zu müssen. Wenn man nun mehrere Views mit unterschiedlichen Layout XML-Dateien und gleichnamigen IDs hat und man später die Refactor-Funktion verwenden will, benennt man alle neu, ohne das man es will. Man muss sich für jedes Element eine Unterschiedliche ID einfallen lassen, obwohl manche die selbe Funktion haben. Dadurch entstehen lange und unübersichtliche ID-Namen, die man sich nicht merken kann. Das Problem ist: Es muss immer darauf geachtet werden, keine doppelten IDs zu vergeben.\\
 
@@ -58,7 +58,7 @@ public class OldWayActivity extends AppCombatActivity {
 
 
 Ein weitere Umständlichkeit ist es, für jedes Element ein findViewById-casting vornehmen zu müssen, wie wir es im Aktivitätencode vorfinden. Dieses Zugriffsverfahren ist, wie bereits oben erwähnt, unnötig performancelastig und kann vermieden werden.
-\subsection{Nacher}
+\subsubsection{Nacher}
 
 \begin{lstlisting}[caption={XML Datei nach dem Einsatz von Databinding.},label=DescriptiveLabel]
 <layout>
@@ -106,7 +106,8 @@ Ein weiterer Pluspunkt: Man erkennt sofort für was welches Steuerelement zustä
 
 \subsection{Anwendung}
 Bei der Verwendung von Datenanbindung muss man darauf achten, eine aktuelle Gradle Version zu benutzen (min. 1.5). Zusätzlich muss man in der build.gradle (Module App) Datei innerhalb des android\{\}-Bereichs dataBinding auf enabled=true (dataBinding\{enabled=true\}) setzen, um Datenanbindung möglich zu machen.
-\subsubsection{In der .xml Datei}
+\paragraph{In der .xml Datei}
+\ \\
 Gehen wir davon aus, unsere .xml Datei besteht aus einem Linearlayout und zwei TextViews: Remo
 
 \begin{lstlisting}[caption={Layoutcode ohne jedliche Datenanbindung.},label=DescriptiveLabel]
@@ -180,7 +181,8 @@ Ist diese erstellt, kann bei der Layoutdatei weitergemacht werden. Es wird nun e
 Jetzt können wir unsere ID-Vergabe bei den Elementen löschen und im Text-Tag auf die jeweiligen Attribute des Userobjekts verweisen.
 
 \newpage
-\subsubsection{In der .java Klasse}
+\paragraph{In der .java Klasse}
+\ \\
 Die Datenanbindungstechnologie von Android generiert automatisch spezielle Bindingklasse all jener Layoutdateien die es verwenden. Der Name ergibt sich aus dem Namen der .xml Datei + "binding". Also wenn eine Layoutdatei activity\_main.xml benannt ist, wird daraus die Klasse ActivityMainBinding generiert, die wir nun verwenden können:
 
 \begin{lstlisting}[caption={Die Aktivitätenklasse nach der Integration einer Datenanbindung.},label=DescriptiveLabel]
