--- a/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
@@ -10,7 +10,7 @@
 \tableofcontents
 
 \newpage % KAPITEL PFLICHTENHEFT
-\subfile{bersenkowitsch_pflichtenheft}
+\subfile{all_pflichtenheft}
 
 
 \newpage % KAPITEL THEORETISCHER HINTERGRUND
@@ -35,7 +35,7 @@
 
 \newpage % KAPITEL PLANUNG
 \section{Planung}
-\subfile{bersenkowitsch_guiessay}
+\subfile{all_guiessay}
 \newpage
 \subfile{bersenkowitsch_Databinding}
 
